Fix alignment for login button.

--- a/app/stylesheets/landing.sass
+++ b/app/stylesheets/landing.sass
@@ -38,6 +38,12 @@ $logo-red: #da242b
     +column(6, true)
     line-height: 1
 
+  input[type=submit]
+    width: 70px
+    margin-top: 6px
+    margin-bottom: 7px
+    padding: 5px 10px 5px 7px
+
 hr#colruler
   +colruler(#EEEEEE)
 
